--- a/Canvas/pyproject.toml
+++ b/Canvas/pyproject.toml
@@ -103,6 +103,7 @@ wcwidth = "0.2.13"
 webencodings = "0.5.1"
 websocket-client = "1.8.0"
 websockets = "10.4"
+xgboost = "2.1.1"
 yarl = "1.9.4"
 yfinance = "0.2.41"
 
